syntax = "proto3";

package balance;

service BalanceController {
  rpc Accumulate (NumberArray) returns (SumOfNumberArray);
  rpc RefillBalance (RefillBalanceInfo) returns (CurrentBalance);
}

message NumberArray {
  repeated double data = 1;
}

message SumOfNumberArray {
  double sum = 1;
}

message RefillBalanceInfo {
  string balanceId = 1;
  string transactionId = 2;
  uint64 refillSum = 3;
}

message CurrentBalance {
  uint64 total = 1;
}